Fixed issue with the first container going out of bounds on mobile.

--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,15 @@
 }
 
 #startup_container{
-    width: 500px;
+    width: 100%;
     margin: auto;
-    height: 45px;
+    height: 100%;
 }
 
-#startup_container > div > p {
+#startup_container > div > h3 {
     text-align: center;
     margin-top: 50%;
+    
 }
 
 #amount_of_games_container{
@@ -25,6 +26,10 @@
 #score_container {
     display: flex;
     justify-content: space-between;
+}
+
+#score_container > div > p {
+    text-align: center;
 }
 
 #animation_container {
